kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: myapp
  labels:
    app: myapp
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
    - protocol: TCP
      port: 8084
      targetPort: 8084
      name: dbg
    - protocol: TCP
      port: 8082
      targetPort: 8082
      name: grpc
    - protocol: TCP
      port: 2000
      targetPort: 2000
      name: webhook
